<resources>
    <string name="app_name">Class Management System- CMS</string>
    <string name="student">Student_01</string>
    <string name="studentprofile">Students Profile</string>
    <string name="firstname">FirstName :</string>
    <string name="last_name">Last Name :</string>
    <string name="school">School</string>
    <string name="b_day">B\'Day</string>
    <string name="male">Male</string>
    <string name="add">ADD</string>
    <string name="exams">Exams :</string>
    <string name="batch">Batch</string>
    <string name="female">Female</string>
    <string name="gender">Gender</string>
    <string name="register">Register</string>
    <string name="remove">Remove</string>
    <string name="student_01">Student 01</string>
    <string name="student_02">Student 02</string>
    <string name="student_03">Student 03</string>


    <string name="lable1">Expense Name</string>
    <string name="edit">Edit</string>
    <string name="data_name">Expense 01</string>
    <string name="lable2">Expense Category</string>
    <string name="lable3">Amount</string>
    <string name="lable4">Date</string>
    <string name="to">to</string>
    <string name="expenses">Expenses</string>
    <string name="expense_management">Expense Management</string>
    <string name="add_expense">Add Expense</string>
    <string name="expenses_report">Expenses Report</string>
    <string name="update_expense">Update Expense</string>
    <string name="expdelete">Delete</string>
    <string name="updateExp">UPDATE</string>




    <string name="repdettit">Total Amount</string>
    <string name="repdet1">0.00</string>
    <string name="repdet2">120.00</string>
    <string name="repdet3">100.00</string>
    <string name="total">Amount:</string>


    <string name="save">SAVE</string>
    <string name="textView7">Class Name</string>
    <string name="sub">Subject</string>
    <string name="delete">Delete</string>
    <string name="year">Class Year</string>
    <string name="Location">Location</string>
    <string name="days">Days</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Class Management System </string>
    <string name="nav_header_subtitle">CMS.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">About US</string>
    <string name="menu_slideshow">Recent</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="title_activity_home">Home</string>

    <string-array name="Batches">

        <item>Batch 01</item>
        <item>Batch 02</item>
        <item>Batch 03</item>
        <item>Batch 04</item>
        <item>Batch 05</item>

    </string-array>
    <string-array name="gender">

        <item>Male</item>
        <item>Female</item>


    </string-array>


    <string name="title_activity_retrive_data">retriveData</string>
    <string name="subject">Subject:</string>
    <string name="date">Date:</string>
    <string name="batchcha">Batch:</string>
    <string name="duration">Duration:</string>

    <string name="venue">Venue:</string>
    <string name="notice">Notice:</string>
    <string name="tocha">To</string>
    <string name="addtask">Add Task:</string>
    <string name="managetask">Manage Shedule</string>
    <string name="updateshedule">Update Shedule</string>
    <string name="insertshedule">Insert Details</string>
    <string name="timetablein">TIME TABLE</string>

    <string name="type">Type:</string>
    <string name="lable6">Task1</string>
    <string name="lable7">Task2</string>
    <string name="lable8">Task3</string>
    <string-array name="numbers">
        <item>Lecture</item>
        <item>Exam</item>
        <item>Others</item>
    </string-array>

    <string name="userName">User Name</string>
    <string name="password">Password</string>
    <string name="title_activity_home_new">HomeNew</string>
    <string name="sunday">SUNDAY</string>
    <string name="saturday">SATURDAY</string>
    <string name="friday">FRIDAY</string>
    <string name="thuesday">THUESDAY</string>
    <string name="wednday">WEDNDAY</string>
    <string name="tuesday">TUESDAY</string>
    <string name="monday">MONDAY</string>
    <string name="classes">Classes</string>
    <string name="time_tables">Time Tables</string>
    <string name="button">Button</string>
    <string name="batch_year">Batch Year</string>
    <string name="class_name">Class Name</string>
    <string name="expense_report">Expense Report</string>
    <string name="manage_expense">Manage Expense</string>
    <string name="generate">Generate</string>
    <string name="updateCal">UpdateCal</string>
    <string name="get_date">Get Date</string>

    <string name="savebtn">Save</string>
    <string name="login">Login</string>
    <string name="please_sign_up_here">Please Sign up Here</string>
    <string name="Expsave">Save</string>


    <string name="update">Update</string>
    <string name="profile">PROFILE</string>
    <string name="class_room">CLASS ROOM</string>
    <string name="time_table">TIME TABLE</string>
    <string name="expense">EXPENSE</string>
    <string name="timetable">TimeTable</string>
    <string name="birth">DD/MM/YYYY</string>
    <string name="name">Name</string>
    <string name="mobile">Mobile</string>


</resources>
