<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android" >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#FFFFFF"
        tools:context=".TimeTable">

        <Button
            android:id="@+id/button12"
            android:layout_width="0dp"
            android:layout_height="47dp"
            android:layout_marginTop="8dp"

            android:background="@color/textbox"
            android:onClick="send1"
            android:shadowColor="#00DA1F1F"
            android:shadowRadius="@android:integer/config_longAnimTime"
            android:text="@string/sunday"
            android:textSize="35sp"
            android:textStyle="italic"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView31" />

        <Button
            android:id="@+id/button6"
            android:layout_width="0dp"
            android:layout_height="47dp"
            android:layout_marginTop="8dp"
            android:background="@color/textbox"
            android:onClick="send1"
            android:shadowColor="#00DA1F1F"
            android:text="@string/saturday"
            android:textSize="35sp"
            android:textStyle="italic"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button7"
            app:layout_constraintVertical_bias="1.0" />

        <Button
            android:id="@+id/button7"
            android:layout_width="0dp"
            android:layout_height="47dp"
            android:layout_marginTop="8dp"
            android:background="@color/ic_launcher_background"
            android:onClick="send1"
            android:shadowColor="#00DA1F1F"
            android:text="@string/friday"
            android:textSize="35sp"
            android:textStyle="italic"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button8" />

        <Button
            android:id="@+id/button8"
            android:layout_width="0dp"
            android:layout_height="47dp"
            android:layout_marginTop="8dp"
            android:background="@color/textbox"
            android:onClick="send1"
            android:shadowColor="#00DA1F1F"
            android:text="@string/thuesday"
            android:textSize="35sp"
            android:textStyle="italic"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button9" />

        <Button
            android:id="@+id/button9"
            android:layout_width="0dp"
            android:layout_height="47dp"
            android:layout_marginTop="4dp"
            android:background="@color/ic_launcher_background"
            android:onClick="send1"
            android:shadowColor="#00DA1F1F"
            android:text="@string/wednday"
            android:textSize="35sp"
            android:textStyle="italic"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button10" />

        <Button
            android:id="@+id/button10"
            android:layout_width="0dp"
            android:layout_height="47dp"
            android:layout_marginTop="8dp"
            android:background="@color/textbox"
            android:onClick="send1"
            android:shadowColor="#00DA1F1F"
            android:text="@string/tuesday"
            android:textSize="35sp"
            android:textStyle="italic"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button11" />

        <Button
            android:id="@+id/button11"
            android:layout_width="0dp"
            android:layout_height="47dp"
            android:layout_marginTop="8dp"
            android:background="@color/ic_launcher_background"
            android:onClick="send1"
            android:shadowColor="#00DA1F1F"
            android:text="@string/monday"
            android:textSize="35sp"
            android:textStyle="italic"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button12" />

        <TextView
            android:id="@+id/textView31"
            android:layout_width="231dp"
            android:layout_height="74dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="40dp"
            android:text="@string/timetablein"
            android:textColor="@color/colorAccent"
            android:textSize="36sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageView11"
            android:layout_width="122dp"
            android:layout_height="98dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textView31"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@mipmap/ic_timetable_frog" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>