<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView2"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Student_Profile">

        <TextView
            android:id="@+id/fnametxt"
            android:layout_width="0dp"
            android:layout_height="42dp"
            android:layout_marginTop="28dp"
            android:textAlignment="center"
            android:textSize="30sp"
            android:textStyle="italic"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView2"

            android:layout_width="116dp"
            android:layout_height="28dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="40dp"
            android:text="@string/mobile"
            android:textSize="18sp"
            android:textStyle="italic"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fnametxt" />

        <EditText
            android:id="@+id/lnametxt"
            android:layout_width="265dp"
            android:layout_height="45dp"
            android:layout_marginStart="8dp"

            android:layout_marginEnd="8dp"
            android:autofillHints=""
            android:background="@color/textbox"
            android:ems="10"
            android:inputType="textPersonName"
            android:textColorHighlight="@color/colorPrimary"
            android:textColorLink="@color/colorPrimaryDark"
            app:layout_constraintBaseline_toBaselineOf="@+id/textView2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/textView2" />

        <TextView
            android:id="@+id/textView3"

            android:layout_width="116dp"
            android:layout_height="28dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="40dp"
            android:text="@string/gender"
            android:textSize="18sp"
            android:textStyle="italic"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

        <TextView
            android:id="@+id/textView5"

            android:layout_width="116dp"
            android:layout_height="28dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="40dp"
            android:text="@string/b_day"
            android:textSize="18sp"
            android:textStyle="italic"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3" />

        <EditText
            android:id="@+id/bdaytxt"
            android:layout_width="0dp"
            android:layout_height="44dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:background="@color/textbox"
            android:ems="10"
            android:hint="@string/birth"
            android:inputType="date"
            android:textColorHighlight="@color/colorPrimaryDark"
            android:textColorLink="@color/colorPrimaryDark"
            app:layout_constraintBaseline_toBaselineOf="@+id/textView5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/textView5" />

        <TextView
            android:id="@+id/textView8"

            android:layout_width="116dp"
            android:layout_height="28dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="40dp"
            android:text="@string/school"
            android:textSize="18sp"
            android:textStyle="italic"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView5" />

        <EditText
            android:id="@+id/scltxt"
            android:layout_width="0dp"
            android:layout_height="44dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:background="@color/textbox"
            android:ems="10"

            android:inputType="textPersonName"

            android:textColorHighlight="@color/colorPrimaryDark"
            android:textColorLink="@color/colorPrimaryDark"
            app:layout_constraintBaseline_toBaselineOf="@+id/textView8"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/textView8" />

        <TextView
            android:id="@+id/textView9"

            android:layout_width="116dp"
            android:layout_height="33dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="40dp"
            android:text="@string/batch"
            android:textSize="18sp"
            android:textStyle="italic"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView8" />

        <TextView
            android:id="@+id/textView10"

            android:layout_width="116dp"
            android:layout_height="28dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="40dp"
            android:textSize="18sp"
            android:textStyle="italic"
            app:layout_constraintBaseline_toBaselineOf="@+id/scrollView2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView9" />

        <Button
            android:id="@+id/OKbtn"
            android:layout_width="144dp"
            android:layout_height="43dp"
            android:layout_marginStart="44dp"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="8dp"
            android:background="@color/colorPrimaryDark"
            android:text="@android:string/ok"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView10"
            app:layout_constraintVertical_bias="1.0" />

        <Button
            android:id="@+id/removeStudent"
            android:layout_width="142dp"
            android:layout_height="44dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:background="@color/colorPrimaryDark"
            android:text="@string/remove"
            android:textSize="18sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/OKbtn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.661"
            app:layout_constraintStart_toEndOf="@+id/OKbtn" />

        <Spinner
            android:id="@+id/txtbatch"
            android:layout_width="0dp"
            android:layout_height="44dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="8dp"
            android:background="@color/textbox"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/textView9"
            app:layout_constraintTop_toBottomOf="@+id/scltxt" />

        <Spinner
            android:id="@+id/gendertxt"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="32dp"
            android:background="@color/textbox"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/textView3"
            app:layout_constraintTop_toBottomOf="@+id/lnametxt" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>